--- a/src/index.css
+++ b/src/index.css
@@ -17,11 +17,20 @@
 }
 
 h1 {
-  font-size: 3.2em;
+  /* font-size: 3.2em; */
   line-height: 1.1;
+  font-family: "Skranji", system-ui;
+  font-weight: 700;
+}
+
+p{
+  font-family: "Poor Story", system-ui;
+  font-weight: 400;
 }
 
 button{
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
   width: 98%;
   height: 55px;
   display: flex;
@@ -31,7 +40,6 @@ button{
   border-radius: 10px;
   border: none;
   background-color: #867070;
-  font-weight: 700;
 }
 
 @media (prefers-color-scheme: light) {
