--- a/src/index.css
+++ b/src/index.css
@@ -42,15 +42,8 @@ button{
   background-color: #867070;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+button:hover{
+  background-color: #ac9494;
+  cursor: pointer;
+  /* outline: 2px solid rgb(82, 82, 247); */
 }
