--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,12 @@
   justify-content: center;
 }
 
+.flex-justify-end {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+
 .width100 {
   width: 100%;
 }
@@ -65,6 +71,17 @@
   margin-top: 0px;
 }
 
+.popup-number {
+  font-size: 45px;
+  margin-bottom: 13px;
+  margin-top: 0px;
+}
+
+.duration-span {
+  height: max-content;
+  border: 1px solid black;
+}
+
 .days {
   margin-top: -20px;
   color: #58b167;
@@ -81,7 +98,7 @@
   border: 1px solid #d4b879;
 }
 
-.description:hover{
+.description:hover {
   cursor: pointer;
 }
 
