--- a/src/App.css
+++ b/src/App.css
@@ -72,14 +72,19 @@
 }
 
 .popup-number {
-  font-size: 45px;
-  margin-bottom: 13px;
+  font-size: 50px;
+  margin-bottom: 10px;
   margin-top: 0px;
 }
 
 .duration-span {
   height: max-content;
+  cursor: pointer;
   /* border: 1px solid black; */
+}
+
+.duration-landing:hover {
+  cursor: pointer;
 }
 
 .days {
@@ -100,6 +105,7 @@
 
 .description:hover {
   cursor: pointer;
+  padding: 6px 17px;
 }
 
 .animal-animation-container {
